<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_concern"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="c371g2.ltc_safety.a_new.NewConcernActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nameTextField_hint"
        android:text=""
        android:ems="10"
        android:id="@+id/nameTextField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phoneNumberField_hint"
        android:ems="10"
        android:id="@+id/phoneNumberField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/emailTextField_hint"
        android:ems="10"
        android:id="@+id/emailTextField" />

    <!-- Concern information -->

    <Spinner
        android:id="@+id/concernTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"/>

    <Spinner
        android:id="@+id/facilitySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/roomField_hint"
        android:ems="10"
        android:id="@+id/roomNumberField" />

    <!-- Actions taken -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/actionsTakenTextField_hint"
        android:text=""
        android:ems="10"
        android:id="@+id/actionsTakenTextField" />

    <Button
        android:text="@string/submit_concern_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit_concern_button" />

</LinearLayout>
